<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:title="@string/nr_test_activity_title" >

    <ListPreference
        android:dialogTitle="@string/str_phoneid"
        android:entries="@array/array_phoneid_key"
        android:entryValues="@array/array_phoneid_value"
        android:key="@string/str_key_phoneid_nr_mode"
        android:title="@string/str_phoneid" />

    <ListPreference
        android:dialogTitle="@string/str_nr_mode"
        android:entries="@array/array_nr_mode_key"
        android:entryValues="@array/array_nr_mode_value"
        android:key="@string/str_key_nr_mode"
        android:title="@string/str_nr_mode" />

    <ListPreference
        android:dialogTitle="@string/str_endc_mode"
        android:entries="@array/array_endc_mode_key"
        android:entryValues="@array/array_endc_mode_value"
        android:key="@string/str_key_endc_mode"
        android:title="@string/str_endc_mode" />

    <ListPreference
        android:dialogTitle="@string/str_vonr_capa"
        android:entries="@array/array_vonr_capa_key"
        android:entryValues="@array/array_vonr_capa_value"
        android:key="@string/str_key_vonr_capa"
        android:title="@string/str_vonr_capa" />

    <SwitchPreference
        android:key="@string/str_key_nr_ds_mode"
        android:summaryOff="@string/str_nr_ds_mode_off"
        android:summaryOn="@string/str_nr_ds_mode_on"
        android:title="@string/str_nr_ds_mode" />

</PreferenceScreen>